@@ -1,3 +1,11 @@
+2012-07-19 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCicode.c (geniCodeAdd): fixed bug 3537338
+	* src/ds390/gen.c (genMultOneByte): handle long result for pointer offsets
+	* src/mcs51/gen.c (genLeftShiftLiteral, genRightShiftLiteral),
+	* src/z80/gen.c (genLeftShiftLiteral): added wassert
+	* support/regression/tests/bug3537338.c: new, added
+
 2012-07-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCopt.c: temporarily disable lospre until I can figure out
